<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Demal</string>
    <string name="login_later"><u>Войти позже</u></string>
    <string name="slogan">Отдохни, расслабься и многое другое с нашим приложением</string>
    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="full_name">Полное имя</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="already_have_account">Уже есть аккаунт? <u>Войти</u></string>
    <string name="agree_terms">Регистрируясь, вы подтверждаете, что принимаете наши <u>Условия использования</u> и <u>Политику конфиденциальности</u></string>
    <string name="dont_have_account">Еще нет аккаунта? <u>Регистрация</u></string>
    <string name="forget_password"><u>Забыли пароль?</u></string>
    <string name="log_into_acc">Вход в аккаунт</string>
    <string name="welcome_back">С возвращением</string>
    <string name="hello_world">Hello world!</string>
    <string name="changeButton">Change</string>
    <string name="cancelButton">Cancel</string>
    <string name="change_back">Смена фона</string>
    <string name="http">HTTP</string>
    <string name="stream">Stream</string>
    <string name="sd">SD</string>
    <string name="uri">Uri</string>
    <string name="raw">Raw</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="loop">Loop</string>
    <string name="backward">Back</string>
    <string name="forward">Forw</string>
    <string name="info">Info</string>
    <string name="zero_time">00:00</string>
    <string name="all_meditates">Все медитации</string>
    <string name="relax_meditate">Медитации для расслабления</string>
    <string name="user_name">Имя пользователя</string>
    <string name="register">Зарегистрироваться</string>
    <string name="sound_volume">Громкость звука</string>
    <string name="category">Category</string>
    <string name="desc">Описание</string>
    <string name="profile">Профиль</string>
    <string name="listened_audio_count">Прослушано аудио:</string>
    <string name="listened_time_count">Минуты прослушивания:</string>
    <string name="days_with_us">Количество дней с нами:</string>
    <string name="audio_name">Название аудио</string>
    <string name="breathing_gym">Дыхательная гимнастика</string>
    <string name="success_register">Регистрация прошла успешно</string>
    <string name="authorize_error">При авторизации произашла ошибка</string>
    <string name="register_error">При регистрации произашла ошибка</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Настройки</string>
    <string name="inhale">Вдыхайте</string>
    <string name="exhale">Выдыхайте</string>
    <string name="hold">Держите</string>
    <string name="close">Закрыть</string>
    <string name="select_language">Выберите язык / Тілді таңдаңыз</string>
    <string name="not_selected_language">Язык не выбран / Тіл таңдалынбады </string>
    <string name="language">Языки</string>
    <string name="kazakh">Казахский</string>
    <string name="russian">Русский</string>
    <string name="your_favorites">Ваши избранные</string>
    <string name="popular_meditations">Популярные медитации</string>
    <string name="popular_music">Популярная музыка</string>
    <string name="popular_sleeps">Популярные сказки</string>
    <string name="link_to_verify_email_sent">Ссылка на подтверждение адреса электронной почты отправлена</string>
    <string name="email_verification_error">Ошибка верификации почты</string>
    <string name="exit">Выйти</string>
    <string name="change_password">Поменять пароль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="current_password">Текующий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="confirm">Подтвердить</string>
    <string name="change_avatar"><u>Изменить аватар</u></string>
    <string name="edit_profile">Изменить профиль</string>
    <string name="email_not_verified">Почта не подтверждена</string>
    <string name="email_not_edited">Почта не изменена</string>
    <string name="successfully_edited">Успешно изменено</string>
    <string name="failed_editing">Ошибка изменения</string>
    <string name="success_update_photo">Фото успешно изменено</string>
    <string name="failed_upload_image">Ошибка изменения фото</string>
    <string name="error">Ошибка:</string>
    <string name="image_not_selected">Фото не выбрано</string>
    <string name="uploading">Загрузка..</string>
    <string name="require_verify_email">Запросить подтверждение</string>
    <string name="your_email_not_verified">Ваша почта не подтверждена</string>
    <string name="reset_password">Восстановить пароль</string>
    <string name="reset_instruction">Для восстановления пароля, укажите почту вашего аккаунта. Вам выслано письмо с дальнейшими инструкциями.</string>
    <string name="reset_pass_sent">Письмо для восстановления отправлено</string>
    <string name="request_id_token">830446498789-rkeqk0k2vctvaibc3acn7g500ooh1knd.apps.googleusercontent.com</string>
    <string name="didnt_logged">Вы не вошли в аккаунт, зарегистрируйтесь или войдите</string>
    <string name="ok">Хорошо</string>
    <string name="fill_email">Заполните электронную почту</string>
    <string name="fill_password">Заполните пароль</string>
    <string name="incorrect_email_format">Не верный формат адреса электронной почты</string>
    <string name="fill_user_name">Заполните имя пользователя</string>
    <string name="password_not_more_5">Пароль должен быть длиннее 5 символов</string>
    <string name="fill_current_pass">Заполните текующий пароль</string>
    <string name="fill_new_password">Заполните новый пароль</string>
    <string name="confirm_new_password">Подтвердите пароль</string>
    <string name="password_changed_success">Пароль изменен успешно</string>
    <string name="password_change_fail">Ошибка изменения пароля</string>
    <string name="incorrect_current_password">Не верный текующий пароль</string>
    <string name="passwords_mismatch">Пароли не совпадают</string>
    <string name="stopped">Остановлено</string>
    <string name="exit_error">Ошибка выхода</string>
    <string name="diary">Дневник</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="content_diary">Сегодня я создавал для дипломного проекта андроид приложение с различными функциями. Думал получается нормально. Но все же нужно еще доработать дизайн и переходы</string>
    <string name="content">Содержание</string>
    <string name="title">Заголовок</string>
    <string name="title_length_not_more_4">Длина заголовка должна быть более 4 символов!</string>
    <string name="content_length_4">Длина дневника должна быть более 4 символов!</string>
    <string name="confirm_delete">Подтвердите удаление!</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="diary_updated">Дневник обновлен!</string>
    <string name="new_note_added">Новый дневник добавлен!</string>
    <string name="own_diary">Личный дневник</string>

</resources>