<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment"
    android:background="@color/lightBlue"
    >

    <ImageButton
        style="@style/BackArrow"
        android:id="@+id/setting_back_btn"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:prompt="@color/white"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/editProfile"
            android:text="@string/edit_profile"
            android:textColor="@color/darkGray"
            app:backgroundTint="@color/white"
            style="@style/MainButtons"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/passwordChange"
            android:text="@string/change_password"
            android:textColor="@color/darkGray"
            app:backgroundTint="@color/white"
            style="@style/MainButtons"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exit_btn"
            android:layout_marginTop="10dp"
            android:text="@string/exit"
            style="@style/MainButtons"
            android:textColor="@color/darkGray"
            app:backgroundTint="@color/white"
            />

    </LinearLayout>

</RelativeLayout>