<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/island_back"
    android:id="@+id/main_container"
    tools:context=".MainActivity">

    <!--    <TextView-->
    <!--        android:layout_width="330dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:layout_above="@+id/buttons"-->
    <!--        android:layout_marginBottom="40dp"-->
    <!--        android:textSize="18sp"-->
    <!--        android:textColor="@color/darkGray"-->
    <!--        android:fontFamily="casual"-->
    <!--        android:gravity="center"-->
    <!--        android:text="@string/slogan"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:background="@drawable/logo_example"
        android:fontFamily="casual"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/buttons"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >

        <Button
            style="@style/MainButtons"
            android:layout_width="150dp"
            android:id="@+id/openRegister"
            android:text="@string/registration"
            />
        <Button
            android:layout_width="150dp"
            style="@style/MainButtons"
            android:layout_marginStart="45dp"
            android:id="@+id/openLogin"
            android:text="@string/login"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:id="@+id/loginLater"
        android:background="@color/transparent"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:text="@string/login_later"
        android:layout_alignParentBottom="true"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:buttonSize="icon_only"
        android:layout_margin="10dp"
        android:layout_above="@id/buttons"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

</RelativeLayout>