<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backgrounds"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="13dp"
                android:background="@drawable/ic_background"
                android:elevation="10dp"

                app:backgroundTint="@color/white"
                />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/back_sounds"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="13dp"
                android:background="@drawable/ic_background_music"
                android:elevation="10dp"
                app:backgroundTint="@color/white" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/favs_text"
            style="@style/HomeTexts"
            android:text="@string/your_favorites"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_favs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/HomeTexts"
            android:text="@string/popular_meditations"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_top_meditations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/HomeTexts"
            android:text="@string/popular_music"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_top_musics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/HomeTexts"
            android:text="@string/popular_sleeps"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_top_sleeps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            />
    </LinearLayout>
</ScrollView>