<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ResetPasswordFragment"
    android:background="@mipmap/island_back"

    android:id="@+id/container">

    <Button
        style="@style/BackArrow"
        android:id="@+id/back_login_btn"

        />

    <TextView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="Восстановление пароля"
        android:textColor="@color/white"
        android:layout_marginHorizontal="10dp"
        android:textSize="29sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/welcome"
        android:layout_marginTop="180dp"/>

    <View
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcome"
        android:background="@color/white"/>

    <TextView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:text="@string/reset_instruction"
        android:layout_marginHorizontal="40dp"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="100dp"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:layout_below="@+id/welcome"
        android:padding="20dp">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Custom.Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:textCursorDrawable="@color/lightGray"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/MainButtons"
            android:text="@string/reset_password"
            android:id="@+id/reset_btn"
            android:layout_marginTop="23dp"
            />

    </LinearLayout>



</RelativeLayout>